# FDIM

./: LICENSE  README.md  dataset_test.py  install.sh  pyproject.toml  single_test.py
common_utils/: corr.py  linear.py
data/dataset/: AVT-VQDB-UHD-1_info.csv  bvi_hd_info.csv  mcml_4k_info.csv  waterloo_ivc_4k_info.csv
fdim/: README.md  run_fdim.py  run_fdim_dataset_infer.py  run_fdim_single_infer.py
fdim/utils/: convert_color.py  reader.py  utils.py
fdim/vmaf/: calc_vmaf.py  vmaf
